<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="main_screen_header">Playlist maker</string>
    <string name="search_button">Поиск</string>
    <string name="media_library_button">Медиатека</string>
    <string name="settings_button">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="consumer_application">Пользовательское соглашение</string>
</resources>