<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/screen_horizontal_padding"
    android:paddingTop="@dimen/screen_top_padding"
    android:paddingBottom="@dimen/screen_bottom_padding">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/settings_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_arrow_back"
            android:drawablePadding="28dp"
            android:fontFamily="@font/yandex_sans_text_medium"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="start"
            android:text="@string/settings_button"
            android:textColor="@color/black"
            android:textSize="@dimen/screen_header_text_size" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="24dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_screen_button_size"
            android:drawableRight="@drawable/ic_switcher"
            android:fontFamily="@font/yandex_sans_text_regular"
            android:gravity="center_vertical"
            android:text="@string/dark_theme"
            android:textColor="@color/black"
            android:textSize="@dimen/settings_screen_buttons_text_size" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_screen_button_size"
            android:drawableRight="@drawable/ic_share"
            android:fontFamily="@font/yandex_sans_text_regular"
            android:gravity="center_vertical"
            android:text="@string/share"
            android:textColor="@color/black"
            android:textSize="@dimen/settings_screen_buttons_text_size" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_screen_button_size"
            android:drawableRight="@drawable/ic_support"
            android:fontFamily="@font/yandex_sans_text_regular"
            android:gravity="center_vertical"
            android:text="@string/support"
            android:textColor="@color/black"
            android:textSize="@dimen/settings_screen_buttons_text_size" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_screen_button_size"
            android:drawableRight="@drawable/ic_arrow_forward"
            android:fontFamily="@font/yandex_sans_text_regular"
            android:gravity="center_vertical"
            android:text="@string/consumer_application"
            android:textColor="@color/black"
            android:textSize="@dimen/settings_screen_buttons_text_size" />
    </LinearLayout>
</LinearLayout>